---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 24. 1. 2020
  Changes:
    - Updated for Factorio 0.18
    - Don't forget to update/change this as necessary Suprcheese!
---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 23. 3. 2019
  Bugfixes:
    - Fixed a mod crash with Auto-targeting.
---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 20. 3. 2019
  Changes:
    - Factorio Standard Library is no longer directly bundled with this mod, but rather cross-referenced, and is now a required dependency.
    - Added the ability to remove ion cannons via cheat.
  Bugfixes:
    - Fixed a bug with Bob's mods compatibility (research prereqs).
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 11. 3. 2019
  Changes:
    - Updated for Factorio 0.17 (thanks emperorjimmy!)
    - Updated Russian translation (courtesy of badway)
    - Show Admin Panel is no longer checked by default.
    - Show Cheat Menu moved to a Mod Setting rather than a checkbox option in top dialog. Disabled by default, this should reduce the visibility of the cheats significantly, as they were a bit too readily accessible before.
    - Added a new checkbox in the top dialog to toggle Auto-Targeting. This is exactly the same function as the Mod Setting, just more easily accessible. As with the Mod Setting, only Admins (or single-player, of course) can access this toggle. Toggling this setting takes priority over the Mod Setting.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 24. 2. 2018
  Minor Features:
    - Ion cannon strikes now show up on the minimap akin to vanilla artillery strikes.
  Changes: