@@ -1,9 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.0
-Date: 24. 1. 2020
+Date: 26. 1. 2020
   Changes:
     - Updated for Factorio 0.18
-    - Don't forget to update/change this as necessary Suprcheese!
+  Bugfixes:
+    - Players who are denied ion cannon permissions will now simply have the targeting device returned to inventory rather than removed entirely.	
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.2
 Date: 23. 3. 2019
